# DiSC-AMC

./: .gitignore  .gitmodules  README.md  REPOSITORY_SUMMARY.md  pyproject.toml  run_cross_domain_eval.sh  run_denomae_ft_vanilla_eval.sh  run_experiments.sh  run_finetuning.sh  run_pipeline.sh  run_radioml_dino_training.sh  run_radioml_eval.sh  run_radioml_native_eval.sh  run_radioml_native_finetuning.sh  run_radioml_native_finetuning_v2.sh
notebooks/: autoencoder.ipynb  classifier.ipynb  classify.py  llm_inference.ipynb  model_embeddings.ipynb  plot.ipynb
src/: naming.py
src/evaluation/: audit_experiments.py  cross_domain_eval.py  denomae_snr_eval.py  gemini_googleai.py  gpt_openai.py  unsloth_eval.py  utils.py
src/finetuning/: __init__.py  dataset.py  train.py
src/prompt/: __init__.py  baseline.py  data_processing.py  embedding_features.py  generated_dataset.py  naming.py  radioml.py  rag.py  sfa.py  templates.py  visualization.py
src/representation learning/: classifier_training.py  compute_centroids.py  convert_predictions.py  data_loader.py  embedding_pipeline.py  inference.py
src/representation_learning/: autoencoder_training.py  classifier_training.py  compute_centroids.py  data_loader.py  embedding_pipeline.py  generate_radioml_images.py  inference.py  processing.py  radioml_dino_training.py
